//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String
  email String [unique, not null]
  hashedPassword String
  role String [not null, default: 'USER']
  isVerified Boolean [not null, default: false]
  tokens Token [not null]
  sessions Session [not null]
  family Family
  familyId Int
}

Table Session {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  expiresAt DateTime
  handle String [unique, not null]
  hashedSessionToken String
  antiCSRFToken String
  publicData String
  privateData String
  user User
  userId Int
}

Table Token {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  hashedToken String [not null]
  type TokenType [not null]
  expiresAt DateTime [not null]
  sentTo String [not null]
  user User [not null]
  userId Int [not null]

  indexes {
    (hashedToken, type) [unique]
  }
}

Table Errand {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  ErrandLevel ErrandLevel
  errandLevelId Int
  Family Family
  familyId Int
}

Table ErrandLevel {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  errands Errand [not null]
  name ErrandLevelName [not null]
}

Table Family {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  users User [not null]
  errands Errand [not null]
}

Enum TokenType {
  RESET_PASSWORD
}

Enum ErrandLevelName {
  Present
  Lacking
  Missing
}

Ref: User.familyId > Family.id

Ref: Session.userId > User.id

Ref: Token.userId > User.id

Ref: Errand.errandLevelId > ErrandLevel.id

Ref: Errand.familyId > Family.id